--- a/style.css
+++ b/style.css
@@ -10,3 +10,10 @@ marquee {
     color:darkgreen;
 
 }
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    color: aliceblue;
+}
